scrolbar issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,6 @@ img {
     }
 
     .navbar .login {
-        margin-left: 10px;
+        font-size: 1rem;
     }
 }
